--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -14,6 +14,17 @@
   font-style: normal;
 }
 
+html,
+body {
+  font-family: "Inter", sans-serif;
+}
+
+.container {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @theme {
   --color-pojox-green: #2ea66e;
   --color-pojox-beige: #f0ead6;
